--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -41,6 +41,7 @@
     &__list-item {
         display: flex;
         align-items: center;
+        cursor: pointer;
     }
 
     &__list-item:nth-child(1) {
