--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #E7F6FF;
+  background-image: url(../public/img/bg_initial.jpg);
   padding: 0 20px;
   min-width: 415px
 }
