--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -86,7 +86,7 @@
         &__plus-button-active {
             width: 32px;
             height: 32px;
-            background: linear-gradient(180deg, #89F09C 0%, #3CC755 100%);;
+            background: #59befe;
             border: none;
             border-radius: 8px;
             display: flex;
