--- a/src/components/Cart/cart.scss
+++ b/src/components/Cart/cart.scss
@@ -137,7 +137,7 @@
             margin-top: 20px;
             width: 100%;
             height: 55px;
-            background: #9DD558;
+            background: #59befe;
             border: none;
             border-radius: 18px;
             font-weight: 600;
