--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -11,9 +11,30 @@
         flex-direction: column;
         transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
+        .ContentLoader {
+            width: 100%;
+        }
+        
+        rect {
+
+            &:nth-child(1) {
+                width: 100%;
+            }
+
+            &:nth-child(2) {
+                width: 100%;
+            }
+        }
+
         &:hover {
             box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
             transform: translateY(-5px);
+        }
+
+        &__link {
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
         }
     
         &__img {
