--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,29 @@ body {
     margin-bottom: 30px;
   }
 
+  &__back {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 39px;
+    color: #000000;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    &::before {
+      content: '';
+      background-image: url(../public/img/button_arrow.svg);
+      width: 16px;
+      height: 14px;
+      background-repeat: no-repeat;
+      transform: rotate(180deg);
+      margin-left: 5px;
+      margin-right: 7px;
+      transition: transform 0.2s ease-in-out;
+    }
+  }
+
   &__goods {
     display: grid;
     grid-template-columns: 1fr;
@@ -66,6 +89,8 @@ body {
   grid-column-start: 1;
 }
 
+
+
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -84,10 +109,14 @@ body {
 .product {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
-  &__img img {
-    width: auto;
-    max-height: 400px;
+  &__loader {
+    width: 100%;
+  }
+
+  &__img {
+    align-self: center;
   }
 
   &__text-box {
@@ -100,7 +129,7 @@ body {
     font-size: 22px;
     line-height: 25px;
     color: #000000;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     align-self: center;
   }
   
@@ -125,6 +154,49 @@ body {
     line-height: 19px;
     color: #FFFFFF;
     cursor: pointer;
+  }
+
+  &__button-active {
+    margin-top: 20px;
+    width: 100%;
+    height: 55px;
+    background: #9DD458;
+    border: none;
+    border-radius: 18px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+  }
+
+  @media(min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+
+    &__img {
+      margin-right: 30px;
+      
+      img {
+        width: auto;
+        height: 350px;
+      }
+    }
+
+    &__text-box {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__button {
+      margin-top: auto;
+      margin-bottom: 40px;
+    }
+
+    &__button-active {
+      margin-top: auto;
+      margin-bottom: 40px;
+    }
   }
 }
 
