--- a/src/components/Cart/cart.scss
+++ b/src/components/Cart/cart.scss
@@ -1,186 +1,170 @@
-.overlay {
-    position: fixed;
-    z-index: 1000;
-    background-color: rgba($color: #000000, $alpha: 0.5);
-    left: 0;
-    top: 0;
-    width: 100%;
+
+.cart {
+    width: 80%;
     height: 100%;
+    margin: 0 auto;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
 
-    .cart {
-        position: fixed;
-        z-index: 1001;
-        background-color: #FFFFFF;
-        right: -0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        padding: 30px;
+    &__header {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    &__titel {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 29px;
+        color: #000000;
+    }
+
+    &__close-button {
+        width: 32px;
+        height: 32px;
+        background-color: transparent;
+        border: 1px solid #DBDBDB;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         flex-direction: column;
+        cursor: pointer;
+        margin-left: 15px;
 
-        &__header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 30px;
+
+        span:nth-child(1) {
+            margin-bottom: 5px;
+            width: 11px;
+            height: 2px;
+            background-color: #B5B5B5;
+            transform: rotate(-45deg) translateY(2px) translateX(-2px);
         }
 
-        &__titel {
-            font-weight: 700;
-            font-size: 24px;
-            line-height: 29px;
-            color: #000000;
+        span:nth-child(2) {
+            width: 11px;
+            height: 2px;
+            background-color: #B5B5B5;
+            transform: rotate(45deg) translateY(-3px) translateX(-3px);
+        }
+    }
+
+    &__item-box {
+        width: 100%;
+        margin-bottom: 30px;
+        overflow: scroll;
+    }
+
+    &__item {
+        width: 100%;
+        height: 119px;
+        display: flex;
+        align-items: center;
+        padding: 20px;
+        border-top: 1px solid #F3F3F3;
+
+        &:nth-last-child(1) {
+            border-bottom: 1px solid #F3F3F3;
         }
 
-        &__close-button {
-            width: 32px;
-            height: 32px;
-            background-color: transparent;
-            border: 1px solid #DBDBDB;
-            border-radius: 8px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            cursor: pointer;
-            margin-left: 15px;
+    }
 
+    &__img {
+        margin-right: 20px;
+        padding-bottom: 11px;
+    }
 
-            span:nth-child(1) {
-                margin-bottom: 5px;
-                width: 11px;
-                height: 2px;
-                background-color: #B5B5B5;
-                transform: rotate(-45deg) translateY(2px) translateX(-2px);
-            }
+    &__item-titel {
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 17px;
+        color: #000000;
+        margin-bottom: 8px;
+        max-width: 180px;
+        margin-right: auto;
+    }
 
-            span:nth-child(2) {
-                width: 11px;
-                height: 2px;
-                background-color: #B5B5B5;
-                transform: rotate(45deg) translateY(-3px) translateX(-3px);
-            }
-        }
+    &__item-price {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 17px;
+        color: #000000;
+    }
 
-        &__item-box {
-            margin-bottom: 30px;
-            overflow: scroll;
-        }
+    &__bottom {
+        margin-top: auto;
+        width: 100%;
+    }
 
-        &__item {
-            width: 100%;
-            height: 119px;
-            display: flex;
-            align-items: center;
-            padding: 20px;
-            border: 1px solid #F3F3F3;
-            border-radius: 20px;
+    &__total-price {
+        font-size: 16px;
+        line-height: 19px;
+        color: #000000;
+        text-align: right;
+        margin-right: 20px;
+        margin-bottom: 30px;
 
-            &:not(:last-child) {
-                margin-bottom: 20px;
-            }
-
-        }
-
-        &__img {
-            margin-right: 20px;
-            padding-bottom: 11px;
-        }
-
-        &__item-text-box {
-            margin-right: auto;
-            max-width: 151px;
-
-        }
-
-        &__item-titel {
-            font-weight: 400;
-            font-size: 15px;
-            line-height: 17px;
-            color: #000000;
-            margin-bottom: 8px;
-        }
-
-        &__item-price {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 17px;
-            color: #000000;
-        }
-
-        &__bottom {
-            margin-top: auto;
-            width: 100%;
-        }
-
-        &__total-price {
-            font-size: 16px;
-            line-height: 19px;
-            color: #000000;
-            display: flex;
-            justify-content: space-between;
-
-            span {
-                font-weight: 600;
-                font-size: 16px;
-                line-height: 19px;
-                color: #000000;
-            }
-
-            &:not(:last-child) {
-                margin-bottom: 20px;
-            }
-        }
-
-        &__button {
-            margin-top: 10px;
-            width: 100%;
-            height: 55px;
-            background: #59befe;
-            border: none;
-            border-radius: 18px;
+        span {
             font-weight: 600;
             font-size: 16px;
             line-height: 19px;
-            color: #FFFFFF;
-            cursor: pointer;
+            color: #000000;
+            margin-left: 5px;
         }
-
-        @media(min-width: 576px) {
-            width: 410px;
-        }
-
-
-
-        &__empty {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 95%; 
-            
-
-            &-titel {
-                font-weight: 700;
-                font-size: 32px;
-                line-height: 29px;
-                color: #000000;
-                text-align: center;
-
-                &:not(:last-child) {
-                    margin-bottom: 10px;
-                }
-            }
-
-            &-img {
-                align-self: center;
-                margin-top: 30px;
-                margin-bottom: 30px;
-            }
-
-
-        }
-
-        
     }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto ;
+        width: 300px;
+        height: 55px;
+        background: #59befe;
+        border: none;
+        border-radius: 18px;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 19px;
+        color: #FFFFFF;
+        cursor: pointer;
+
+        &-right {
+            margin: 0 0 0 auto;
+        }
+
+    }
+
+
+    &__empty {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 95%; 
+        
+
+        &-titel {
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 29px;
+            color: #000000;
+            text-align: center;
+
+            &:not(:last-child) {
+                margin-bottom: 10px;
+            }
+        }
+
+        &-img {
+            align-self: center;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+
+
+    }
+
+    
 }
